--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "shsc-online-replit",
   "version": "0.1.0",
   "private": true,
-  "type": "module",
   "scripts": {
     "dev": "next dev -p 3001 --turbopack",
     "build": "DISABLE_ESLINT_PLUGIN=true next build",
@@ -16,6 +15,7 @@
     "firebase-admin": "^13.1.0",
     "formidable": "^3.5.4",
     "lru-cache": "^11.1.0",
+    "lucide-react": "^0.552.0",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -35,13 +35,16 @@
     }
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/formidable": "^3.4.5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.21",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
+    "tailwindcss": "^4.1.16",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.29.0"
