--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,28 +7,28 @@
 
     /* Linting */
     "strict": true,
-    "noImplicitAny": true,                    // Raise error on expressions and declarations with an implied 'any' type
-    "strictNullChecks": true,                 // Enable strict null checks
-    "strictFunctionTypes": true,              // Enable strict checking of function types
-    "strictBindCallApply": true,              // Enable strict 'bind', 'call', and 'apply' methods on functions
-    "strictPropertyInitialization": true,     // Ensure non-undefined class properties are initialized in the constructor
-    "noImplicitThis": true,                   // Raise error on 'this' expressions with an implied 'any' type
-    "alwaysStrict": true,                     // Parse in strict mode and emit "use strict" for each source file
-    "noUnusedLocals": true,                   // Report errors on unused locals
-    "noUnusedParameters": true,               // Report errors on unused parameters
-    "noImplicitReturns": true,                // Report error when not all code paths in function return a value
-    "noFallthroughCasesInSwitch": true,       // Report errors for fallthrough cases in switch statement
-    "noUncheckedIndexedAccess": true,         // Add 'undefined' to a type when accessed using an index
+    "noImplicitAny": true, // Raise error on expressions and declarations with an implied 'any' type
+    "strictNullChecks": true, // Enable strict null checks
+    "strictFunctionTypes": true, // Enable strict checking of function types
+    "strictBindCallApply": true, // Enable strict 'bind', 'call', and 'apply' methods on functions
+    "strictPropertyInitialization": true, // Ensure non-undefined class properties are initialized in the constructor
+    "noImplicitThis": true, // Raise error on 'this' expressions with an implied 'any' type
+    "alwaysStrict": true, // Parse in strict mode and emit "use strict" for each source file
+    "noUnusedLocals": true, // Report errors on unused locals
+    "noUnusedParameters": true, // Report errors on unused parameters
+    "noImplicitReturns": true, // Report error when not all code paths in function return a value
+    "noFallthroughCasesInSwitch": true, // Report errors for fallthrough cases in switch statement
+    "noUncheckedIndexedAccess": true, // Add 'undefined' to a type when accessed using an index
     "noPropertyAccessFromIndexSignature": true, // Require undeclared properties from index signatures to use element access
-    "allowUnusedLabels": false,               // Report error when a label is unused
-    "allowUnreachableCode": false,            // Report error when unreachable code is detected
+    "allowUnusedLabels": false, // Report error when a label is unused
+    "allowUnreachableCode": false, // Report error when unreachable code is detected
     "noUncheckedSideEffectImports": true,
-    "exactOptionalPropertyTypes": true,       // Differentiate between undefined and missing properties
-    "noImplicitOverride": true,               // Ensure overriding members are marked with 'override' keyword
-    "useUnknownInCatchVariables": true,       // Type catch clause variables as 'unknown' instead of 'any'
+    "exactOptionalPropertyTypes": true, // Differentiate between undefined and missing properties
+    "noImplicitOverride": true, // Ensure overriding members are marked with 'override' keyword
+    "useUnknownInCatchVariables": true, // Type catch clause variables as 'unknown' instead of 'any'
     // "sourceMap": true,                     // Generates corresponding .map file
     // "inlineSourceMap": true,
-    "declaration": true,                      // Generate .d.ts files
+    "declaration": true, // Generate .d.ts files
     // "declarationMap": true,                // Generate sourcemaps for d.ts files
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
@@ -50,6 +50,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "src", ".next/types/**/*.ts"],
+  "include": ["global.d.ts", "next-env.d.ts", "src", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
